PR/36079: M. Levinson: Disable the optimization of not forking for the last command in a subshell, otherwise we miss the exit trap.